# WEB_TEST

flet-sample/: README.md
flet-sample/app/: Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
flet-sample/app/src/flet_sample/: __init__.py  run_app.py
flet-sample/cdk/: README.md  cdk.json  cdk.ts  package-lock.json  package.json
